--- a/src/main/resources/templates/user/permission-denied.html
+++ b/src/main/resources/templates/user/permission-denied.html
@@ -3,10 +3,9 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head>
 <title>Permission Denied</title>
-<link href="/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-	<div class="alert alert-warning">
+	<div layout:fragment="content" class="alert alert-warning">
 		<h1>Permission Error</h1>
 		<h2>You do not have access to this section of the website</h2>
 	</div>
