--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -8,9 +8,9 @@
 <body>
 	<div layout:fragment="content">
 		<form class="form-signin" th:action="@{/user/edit}"
-			th:object="${users}" method="post">
+			th:object="${user}" method="post">
 			<h2 class="form-signin-heading">
-				Edit <span th:text="${users.username}"></span> account
+				Edit <span th:text="${user.username}"></span> account
 			</h2>
 
 			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
