--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -6,7 +6,6 @@
 <title th:text="${lecture.name}"></title>
 </head>
 <body>
-	<div layout:fragment="content"
-		th:include="'fragments/lecture' + ${lecture.id}"></div>
+	<div layout:fragment="content" th:include="fragments/lecture"></div>
 </body>
 </html>
