--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -5,14 +5,12 @@
 <head lang="en">
 <title th:text="${lecture.name}"></title>
 </head>
-<script th:inline="javascript">
-	/*<![CDATA[*/
-
-	$(document).ready(function() {
-		$("#lecture").load("/files/html/lecture.html");
-	});
-</script>
 <body>
 	<div layout:fragment="content" id="lecture"></div>
+	<script th:inline="javascript">
+	/*<![CDATA[*/
+		document.getElementById("lecture").innerHTML = [[${lecture.value}]];
+	/*]]>*/
+	</script>
 </body>
 </html>
