--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -3,6 +3,8 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head lang="en">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <title th:text="${lecture.name}"></title>
 </head>
 <body>
@@ -10,9 +12,7 @@
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 
-		var theDiv = document.getElementById("lecture");
-		var content = document.createTextNode(/*[[${lecture.value}]]*/);
-		theDiv.appendChild(content);
+		$("#lecture").append("some text");
 
 		/*]]>*/
 	</script>
