--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -4,9 +4,10 @@
 <title th:text="${lecture.name}"></title>
 </head>
 <body>
-	<div layout:fragment="content"></div>
-	<script type="text/javascript">
-		alert("Hello");
-	</script>
+	<div layout:fragment="content">
+		<script type="text/javascript">
+			alert("Hello");
+		</script>
+	</div>
 </body>
 </html>
