--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<script type="text/javascript">
-			alert("Hello");
+		<div id="layout"></div>
+		<script type="text/javascript" th:include="javascript">
+			$("#layout").html([[${layout.value}]]);
 		</script>
 	</div>
 </body>
