--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -7,7 +7,11 @@
 	<div layout:fragment="content">
 		<div id="layout"></div>
 		<script type="text/javascript" th:include="javascript">
+			/*<![CDATA[*/
+				
 			$("#layout").html([[${layout.value}]]);
+			
+			/*]]>*/
 		</script>
 	</div>
 </body>
