--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<div id="layout"></div>
+		<div id="lecture"></div>
 		<script type="text/javascript" th:inline="javascript">
 			/*<![CDATA[*/
 				
-			$("#layout").html([[${layout.value}]]);
+			$("#lecture").html([[${lecture.value}]]);
 			
 			/*]]>*/
 		</script>
