--- a/src/main/resources/templates/quiz/result.html
+++ b/src/main/resources/templates/quiz/result.html
@@ -3,7 +3,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head lang="en">
-<title>Results</title>
+<title>Result</title>
 </head>
 <body>
 	<div layout:fragment="content" class="container">
