--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	th:with="lang=${#locale.language}" th:lang="${lang}">
 <head>
 <title>JTutor</title>
 <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
@@ -19,7 +20,7 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar">
-					<li><a th:href="@{/}" href="/">Home</a></li>
+					<li><a th:href="@{/}" href="/" th:text="#{label.home}"></a></li>
 					<li><a th:href="@{/quiz/quests}" href="/quiz/quests">Quests</a></li>
 					<li><a th:href="@{/lecture/lectures}" href="/lecture/lectures">Lectures</a></li>
 				</ul>
